--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
         <div class="buttonContainer">
             <button type="button" id="clear" value="">C</button>
             <button type="button" id="reverse" value="">+/-</button>
-            <button type="button" value="">%</button>
-            <button type="button" class="operator" value="">÷</button>
+            <button type="button" id="modulus" value="">%</button>
+            <button type="button" id="divide" class="operator" value="">÷</button>
 
             <button type="button" class="digit" value="">7</button>
             <button type="button" class="digit" value="">8</button>
             <button type="button" class="digit" value="">9</button>
-            <button type="button" class="operator" value="">×</button>
+            <button type="button" id="multiply" class="operator" value="">×</button>
 
             <button type="button" class="digit" value="">4</button>
             <button type="button" class="digit" value="">5</button>
             <button type="button" class="digit" value="">6</button>
-            <button type="button" class="operator" value="">–</button>
+            <button type="button" id="minus" class="operator" value="">–</button>
 
             <button type="button" class="digit" value="">1</button>
             <button type="button" class="digit" value="">2</button>
