--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="buttonContainer">
             <button type="button" id="clear" value="">C</button>
-            <button type="button" id="reverse" value="">+/-</button>
+            <button type="button" id="reverse" value="">±</button>
             <button type="button" id="modulus" value="">%</button>
             <button type="button" id="divide" class="operator" value="">÷</button>
 
@@ -29,7 +29,7 @@
             <button type="button" class="digit" value="">4</button>
             <button type="button" class="digit" value="">5</button>
             <button type="button" class="digit" value="">6</button>
-            <button type="button" id="minus" class="operator" value="">–</button>
+            <button type="button" id="minus" class="operator" value="">-</button>
 
             <button type="button" class="digit" value="">1</button>
             <button type="button" class="digit" value="">2</button>
