fix: bugs and improved functionality

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <div class="calculator">
                 <div class="display">
                     <div id="displayValue"></div>
+                    <div id="tempDisplayValue"></div>
                 </div>
 
                 <div class="buttonContainer">
-                    <button type="button" id="clear" value="">C</button>
+                    <button type="button" id="clear" value="">AC</button>
                     <button type="button" id="reverse" value="">±</button>
                     <button type="button" id="modulus" value="">%</button>
                     <button type="button" id="divide" class="operator" value="">÷</button>
@@ -41,7 +42,7 @@
                     <button type="button" id="plus" class="operator" value="">+</button>
 
                     <button type="button" class="digit" value="0">0</button>
-                    <button type="button" class="digit" value="">.</button>
+                    <button type="button" id="decimal" class="digit" value="">.</button>
                     <button type="button" id="equal" class="equal" value="=">=</button>
                 </div>
             </div>
