Update source links and text

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
         <!--CONTAINS FOOTER-->
         <footer class="footer">
-            <p>Made by <a href="https://bento.me/anas" target="_blank">Anaseig</a> </p>
+            <p>Made by <a href="https://bento.me/anas" target="_blank">Afnan Sami</a> </p>
             <p>---</p>
-            <p>View <a href="https://github.com/anaseig/calculator" target="_blank">Source Code</a></p>
+            <p>View <a href="https://github.com/afnsami/calculator" target="_blank">Source Code</a></p>
         </footer>
 
     </div>
